# c-runtime-wrapper

./: .gitignore  CMakeLists.txt  README.md  build.sh  pom.xml
src/main/c/: CRuntimeWrapper.c  GLibWrapper.c  InterfaceRequest.c  NativeRuntimeWrapper.c
src/main/java/dev/codex/java/: Main.java
src/main/java/dev/codex/java/glibc/: File.java  GLibWrapper.java  InterfaceRequest.java  StdIO.java  StdLib.java
src/main/java/dev/codex/java/pointer/: AbstractPointer.java  Pointer.java
src/main/java/dev/codex/java/runtime/exception/: ExceptionMessage.java  IllegalArgumentException.java  InvalidBufferLengthException.java  InvalidClassTypeException.java
src/main/java/dev/codex/java/runtime/type/: AbstractPointer.java  Flag.java  MemoryAddress.java  NativeError.java  Pointer.java
src/main/java/dev/codex/java/runtime/unix/: FileControl.java  FileDescriptor.java  FileStream.java  IOControl.java  InterfaceRequest.java  NativeRuntimeWrapper.java  PointerFactory.java  StandardIO.java  StandardLibrary.java  Strings.java  UnixStandard.java
src/main/java/dev/codex/java/wrapper/exception/: ExceptionMessage.java  IllegalArgumentException.java  IllegalPointerArgument.java  IllegalPointerType.java  InvalidBufferLengthException.java  InvalidClassTypeException.java  InvalidPointerType.java  InvalidPointerTypeException.java
src/main/java/dev/codex/java/wrapper/pointer/: AbstractPointer.java  Pointer.java
src/main/java/dev/codex/java/wrapper/runtime/: AccessAssociation.java  AccessFlag.java  AccessMode.java  CRuntimeWrapper.java  FCntl.java  File.java  FileControl.java  FileDescriptor.java  FilePosition.java  FileStream.java  Flag.java  GLibCWrapper.java  IOControl.java  InterfaceRequest.java  NativeRuntimeWrapper.java  NetworkTunnelDeviceFlag.java  NetworkTunnelInterfaceFlag.java  NetworkTunnelQueueFlag.java  NetworkTunnelRequestFlag.java  OptionFlag.java  OptionFlagMask.java  OptionFlags.java  PointerFactory.java  RequestCode.java  StandardIO.java  StandardLibrary.java  StandardRequestFlag.java  StdIO.java  StdLib.java  Strings.java  UniStd.java  UnixStandard.java  Whence.java
src/main/java/dev/codex/java/wrapper/type/: AbstractPointer.java  Error.java  Flag.java  FlagSet.java  MemoryAddress.java  Pair.java  Pointer.java
src/test/java/dev/codex/java/unix/runtime/: InterfaceRequestTest.java  NativeRuntimeWrapperTest.java
src/test/java/dev/codex/java/wrapper/runtime/: AccessFlagTest.java  CRuntimeWrapperTest.java  InterfaceRequestTest.java  NativeRuntimeWrapperTest.java  NetworkTunnelDeviceFlagTest.java  NetworkTunnelInterfaceFlagTest.java  NetworkTunnelQueueFlagTest.java  NetworkTunnelRequestFlagTest.java  (+3 more)
(+19 files in other folders)
